# agentic_ai

./: chatBot.py  main.py  pyproject.toml  requirements.txt
me/: summary.txt
notebook/: resumeAssist.ipynb
